base/monitoring/volumes_patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grafana
spec:
  template:
    spec:
      volumes: 
      - hostPath: 
          path: /opt/monitoring/grafana/data
          type: DirectoryOrCreate 
        name: data
      - hostPath: 
          path: /opt/monitoring/grafana/config 
          type: DirectoryOrCreate 
        name: config
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prometheus
spec:
  template:
    spec:
      volumes: 
      - hostPath: 
          path: /opt/monitoring/prometheus/data
          type: DirectoryOrCreate 
        name: data
      - hostPath: 
          path: /opt/monitoring/prometheus/config
          type: DirectoryOrCreate 
        name: config
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: uptime-kuma
spec:
  template:
    spec:
      volumes:
      - hostPath:
          path: /opt/monitoring/uptime-kuma/data
          type: DirectoryOrCreate
        name: data
# ---
# apiVersion: apps/v1
# kind: Deployment
# metadata:
#   name: rustdesk-server
# spec:
#   template:
#     spec:
#       volumes: 
#       - hostPath: 
#           path: /opt/monitoring/rustdesk/data
#           type: DirectoryOrCreate 
#         name: data
#       - hostPath: 
#           path: /opt/monitoring/rustdesk/logs
#           type: DirectoryOrCreate 
#         name: logs
